--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,12 +1,10 @@
-:root {
-  --black: #000000;
-  --dark: #232830;
-  --hospital-green: #ACD9B2;
-  --text-input-field: #F7F7F7;
-  --very-light-pink: #C7C7C7;
-  --white: #FFFFFF;
+$--black: #000000;
+$--dark: #232830;
+$--hospital-green: #acd9b2;
+$--text-input-field: #f7f7f7;
+$--very-light-pink: #c7c7c7;
+$--white: #ffffff;
 
-  --sm: 14px;
-  --md: 16px;
-  --lg: 18px;
-}
+$--sm: 14px;
+$--md: 16px;
+$--lg: 18px;
