--- a/src/styles/Menu.module.scss
+++ b/src/styles/Menu.module.scss
@@ -1,8 +1,8 @@
-@use "./vars";
+@import "./vars";
 
 .Menu {
   background: white;
-  border: 1px solid var(--very-light-pink);
+  border: 1px solid $--very-light-pink;
   border-radius: 6px;
   padding: 20px 20px 0 20px;
   position: absolute;
@@ -10,7 +10,7 @@
   top: 4rem;
 
   height: auto;
-  width: 100px;
+  width: 130px;
 }
 .Menu ul {
   list-style: none;
@@ -26,14 +26,14 @@
 }
 .Menu ul li:last-child {
   padding-top: 20px;
-  border-top: 1px solid var(--very-light-pink);
+  border-top: 1px solid $--very-light-pink;
 }
 .Menu ul li:last-child a {
-  color: var(--hospital-green);
-  font-size: var(--sm);
+  color: $--hospital-green;
+  font-size: $--sm;
 }
 .Menu ul li a {
-  color: var(--back);
+  color: $--black;
   text-decoration: none;
   margin-bottom: 20px;
   display: inline-block;
