--- a/src/styles/components/ProductItem.module.scss
+++ b/src/styles/components/ProductItem.module.scss
@@ -1,7 +1,11 @@
-@use "../vars";
+@import "../vars";
 
 .ProductItem {
   width: 240px;
+}
+.ProductImage {
+  display: flex;
+  justify-content: center;
 }
 .ProductItem img {
   width: 240px;
@@ -14,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
+  width: 190px;
 }
 .product-info figure {
   margin: 0;
@@ -31,15 +36,15 @@
 
 .product-info div p:nth-child(1) {
   font-weight: bold;
-  font-size: var(--md);
+  font-size: $--md;
   margin-top: 0;
   margin-bottom: 4px;
 }
 .product-info div p:nth-child(2) {
-  font-size: var(--sm);
+  font-size: $--sm;
   margin-top: 0;
   margin-bottom: 0;
-  color: var(--very-light-pink);
+  color: $--very-light-pink;
 }
 @media (max-width: 640px) {
   .cards-container {
