--- a/src/styles/pages/PasswordRecovery.scss
+++ b/src/styles/pages/PasswordRecovery.scss
@@ -1,4 +1,4 @@
-@use "../_vars";
+@import '../_vars';
 
 .PasswordRecovery {
   width: 100%;
@@ -20,12 +20,12 @@
 
 .PasswordRecovery-title {
   text-align: center;
-  font-size: var(--lg);
+  font-size: $--lg;
 }
 
 .PasswordRecovery-subtitle {
-  color: var(--very-light-pink);
-  font-size: var(--md);
+  color: $--very-light-pink;
+  font-size: $--md;
   font-weight: 300;
   margin-top: 0;
   margin-bottom: 32px;
@@ -37,23 +37,23 @@
   flex-direction: column;
 }
 .form a {
-  color: var(--hospital-green);
-  font-size: var(--sm);
+  color: $--hospital-green;
+  font-size: $--sm;
   text-align: center;
   text-decoration: none;
   margin-bottom: 52px;
 }
 .label {
-  font-size: var(--sm);
+  font-size: $--sm;
   font-weight: bold;
   margin-bottom: 4px;
 }
 .input {
-  background-color: var(--text-input-field);
+  background-color: $--text-input-field;
   border: none;
   border-radius: 8px;
   height: 30px;
-  font-size: var(--md);
+  font-size: $--md;
   padding: 6px;
   margin-bottom: 12px;
 }
@@ -61,24 +61,24 @@
   margin-bottom: 22px;
 }
 .primary-button {
-  background-color: var(--hospital-green);
+  background-color: $--hospital-green;
   border-radius: 8px;
   border: none;
-  color: var(--white);
+  color: $--white;
   width: 100%;
   cursor: pointer;
-  font-size: var(--md);
+  font-size: $--md;
   font-weight: bold;
   height: 50px;
 }
 .secondary-button {
-  background-color: var(--white);
+  background-color: $--whit;
   border-radius: 8px;
-  border: 1px solid var(--hospital-green);
-  color: var(--hospital-green);
+  border: 1px solid $--hospital-green;
+  color: $--hospital-green;
   width: 100%;
   cursor: pointer;
-  font-size: var(--md);
+  font-size: $--md;
   font-weight: bold;
   height: 50px;
 }
