--- a/src/styles/components/ProductItem.module.scss
+++ b/src/styles/components/ProductItem.module.scss
@@ -7,31 +7,40 @@
   display: flex;
   justify-content: center;
 }
-.ProductItem img {
-  width: 240px;
-  height: 240px;
-  border-radius: 20px;
-  object-fit: cover;
-}
+
 .product-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 12px;
-  width: 190px;
+  margin: 19px 10px 0;
 }
+
+.details {
+  width: 70%;
+  p {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
+
 .product-info figure {
   margin: 0;
   cursor: pointer;
 }
-.ProductItem__button-add-to-cart img {
+
+.button-add-to-cart {
   height: 40px;
   width: 40px;
 }
-.ProductItem__button-added-to-cart img {
+
+.button-added-to-cart {
   height: 45px;
   width: 45px;
-  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15));
+
+  img {
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15));
+  }
 }
 
 .product-info div p:nth-child(1) {
@@ -45,16 +54,4 @@
   margin-top: 0;
   margin-bottom: 0;
   color: $--very-light-pink;
-}
-@media (max-width: 640px) {
-  .cards-container {
-    grid-template-columns: repeat(auto-fill, 140px);
-  }
-  .ProductItem {
-    width: 140px;
-  }
-  .ProductItem img {
-    width: 140px;
-    height: 140px;
-  }
 }
