--- a/src/styles/pages/Checkout.module.scss
+++ b/src/styles/pages/Checkout.module.scss
@@ -1,8 +1,8 @@
-@import '../_vars';
+@import "../_vars.scss";
 
 .Checkout {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 81px);
   display: grid;
   place-items: center;
 }
@@ -21,6 +21,12 @@
 .Checkout-content {
   display: flex;
   flex-direction: column;
+}
+
+.empty-cart {
+  color: $--hospital-green;
+  text-align: center;
+  font-weight: bold;
 }
 
 .order {
@@ -52,12 +58,12 @@
 }
 .order p span:nth-child(1),
 .orders p span:nth-child(1) {
-  font-size: $--md;
+  font-size: var(--md);
   font-weight: bold;
 }
 .order p span:nth-child(2),
 .orders p span:nth-child(2) {
-  font-size: $--sd;
+  font-size: var(--sd);
   color: $--very-light-pink;
 }
 
